Refactor UI texts handling across components
- Replaced inconsistent method calls like `get(0)` with `getFirst()` for better clarity in test files.
- Unified UI text field naming in `FxLogPane` by using descriptive labels and headers (e.g., `labelFilterLogLevel`, `headerTimeColumn`).
- Updated constants and JavaFX table behavior to support constrained resize policies.
- Marked and strengthened internal classes like `Main` as `final` with private constructors.
- Refined code comments for improved readability and maintainability.